<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">苏打微博</string>
	<string name="write">写</string>
	<string name="username">用户名</string>
	<string name="refresh">刷新</string>
	<string name="Msg">微博信息区 </string>
	<string name="Msgsina">微博信息区 此信息来自 sina</string>
	<string name="Msgsohu">微博信息区 此信息来自 sohu</string>

	<string name="all">全部</string>
	<string name="about">关于</string>
	<string name="abouttitle">关于我们</string>
	<string name="abouttext">苏打微博1.0，由ADE小组倾情打造。</string>
	<string name="aboutqq">QQ群：</string>
	<string name="aboutphoneNo">客服热线：</string>
	<string name="set">设置</string>

	<string name="writeMsg">请在此写信息</string>
	<string name="img">图片</string>
	<string name="face">表情</string>
	<string name="sendMsg">发送</string>

	<string name="RE">回复</string>
	<string name="FW">转发</string>
	<string name="more">更多</string>

	<string name="sina">新浪</string>
	<string name="sohu">搜狐</string>
	<string name="enterusername">请输入</string>
	<string name="pwd">密码</string>
	<string name="enterpwd">请输入用户名</string>
	
	<string name="waitDialogTitle">请稍候</string>
	<string name="waitDialogMessage">正在获取微博信息...</string>
	<string name="waitSendMessage">正在发送信息...</string>
	
	<string name="writetitle">新信息</string>
	<string name="back">返回</string>
	<string name="PleaseWrite">	请输入信息后再发送</string>
	<string name="SendSuccess">发送成功</string>
	<string name="SendError">对不起，发送失败，请重新发送</string>
	<string name="photo">拍照</string>
	<string name="album">相册</string>
	<string name="delete">删除</string>
	<string name="isdelete">确定要删除图片吗？</string>
	
	
	<string name="unAuthTips">还未授权，请到设置菜单中授权后使用！</string>
	<string name="unAuthUser">未授权用户</string>
	<string name="authenticationSucceeded">身份验证成功</string>
	<string name="authenticationFailed">身份验证失败</string>
	<string name="dialogCancel">取消</string>
	<string name="dialogOK">确定</string>
	<string name="dialogConfirmInvalidateAuthentication">确定禁用&quot;%s&quot;帐户吗?再次启用需要重验证。</string>
	
	<string name="confirmtitle">退出提示</string>
	<string name="confirmmessage">确定要退出苏打微博吗？</string>
	
	<string name="from">来自</string>
	
	<string name="fav">关注</string>
	<string name="fans">粉丝</string>
	<string name="blog">微博</string>
	<string name="friends">好友</string>
	<string name="separator">"|"</string>
</resources>
