<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:id="@+id/LinearLayoutREandFW"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:gravity="left"
	android:alwaysDrawnWithCache="false">
	<TextView android:text="@string/Msg" android:id="@+id/TextViewMsg"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:background="@color/red" android:textColor="@color/black"
		android:layout_weight="1">
	</TextView>
	<LinearLayout android:id="@+id/LinearLayoutREandFWtop"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal" android:gravity="left">

		<Button android:text="@string/RE" android:id="@+id/BtnRE"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1">
		</Button>
		<Button android:text="@string/FW" android:id="@+id/BtnFW"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1">
		</Button>
		<Button android:text="@string/more" android:id="@+id/BtnMore"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1">
		</Button>
	</LinearLayout>
	<EditText android:hint="@string/writeMsg" android:id="@+id/MyMsg"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:background="@color/green"
		android:layout_weight="1">
	</EditText>
	<LinearLayout android:id="@+id/LinearLayoutREandFWbottom"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal" android:gravity="left">

		<Button android:text="@string/face" android:id="@+id/BtnFace"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1">
		</Button>
		<Button android:text="@string/img" android:id="@+id/BtnImg"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1">
		</Button>
		<Button android:text="@string/sendMsg" android:id="@+id/BtnOK"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1">
		</Button>
	</LinearLayout>
</LinearLayout>